c1/post_thinking
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/post_thinking/src/utils.c:1085:14: error: passing 'char [296]' to parameter of incompatible type 'move_s'
comp_to_san( str, *v8); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/post_thinking/src/utils.c:116:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[])
                         ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/post_thinking/src/utils.c:1108:12: error: expected expression
*( _OWORD *)v11 = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/post_thinking/src/utils.c:1108:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v11 = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/post_thinking/src/obj/utils.o] Error 1
